--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,7 +11,6 @@ header {
     background-size: cover;
     background-position: center;
     position: relative; 
-    overflow: hidden; 
 }
 
 .profile-image-container {
@@ -83,9 +82,17 @@ header nav ul li a:hover {
     color: var(--color-primary-gold);
     font-style: italic;
 }
-/* Sección "WHO AM I ?" */
+/* Sección "CONOCEME" */
 main .container {
     background-color: var(--color-dark);
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.admin-section{
+    flex-grow: 1;
 }
 
 #about {
